--- a/XamarinCommunityToolkitSample/Pages/AboutPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/AboutPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:views="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-                xmlns:viewmodels="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                xmlns:viewmodels="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.AboutPage"
-                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
                 Title="About...">
 
     <pages:BasePage.ToolbarItems>
@@ -40,7 +39,7 @@
                                 <RowDefinition Height="65" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            <views:AvatarView Size="60"
+                            <xct:AvatarView Size="60"
                                               Source="{Binding AvatarUrl}"
                                               HorizontalOptions="Center" VerticalOptions="Center" />
 
