--- a/XamarinCommunityToolkitSample/Pages/Behaviors/CharactersValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/CharactersValidationBehaviorPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<pages:BasePage x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.CharactersValidationBehaviorPage"
-                xmlns="http://xamarin.com/schemas/2014/forms"
+<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
-                x:Name="Page">
+                x:Name="Page"
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.CharactersValidationBehaviorPage">
 
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle"
@@ -57,13 +56,13 @@
         <Label Text="Type characters for validation behavior according to the settings you set upon." />
         <Entry Placeholder="Type characters...">
             <Entry.Behaviors>
-                <behaviors:CharactersValidationBehavior CharacterType="{Binding SelectedItem,
-                                                                                Source={x:Reference CharacterTypePicker}}"
-                                                        InvalidStyle="{StaticResource InvalidEntryStyle}"
-                                                        MaximumCharacterCount="{Binding Text,
-                                                                                        Source={x:Reference MaximumCharacterCountEntry}}"
-                                                        MinimumCharacterCount="{Binding Text,
-                                                                                        Source={x:Reference MinimumCharacterCountEntry}}" />
+                <xct:CharactersValidationBehavior CharacterType="{Binding SelectedItem,
+                                                                          Source={x:Reference CharacterTypePicker}}"
+                                                  InvalidStyle="{StaticResource InvalidEntryStyle}"
+                                                  MaximumCharacterCount="{Binding Text,
+                                                                                  Source={x:Reference MaximumCharacterCountEntry}}"
+                                                  MinimumCharacterCount="{Binding Text,
+                                                                                  Source={x:Reference MinimumCharacterCountEntry}}" />
             </Entry.Behaviors>
         </Entry>
     </StackLayout>
