--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaskedBehaviorPage.xaml
@@ -2,7 +2,7 @@
 <pages:BasePage x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.MaskedBehaviorPage"
                 xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample">
     <ScrollView>
         <StackLayout Padding="{StaticResource ContentPadding}" Spacing="5">
@@ -11,21 +11,21 @@
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="XX-XX-XX" />
+                    <xct:MaskedBehavior Mask="XX-XX-XX" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Sort code 'XX-XX-XX'" />
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="AA-AA-AA" UnMaskedCharacter="A" />
+                    <xct:MaskedBehavior Mask="AA-AA-AA" UnMaskedCharacter="A" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Sort code 'AA-AA-AA'" />
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="XXXX XXXX XXXX XXXX" />
+                    <xct:MaskedBehavior Mask="XXXX XXXX XXXX XXXX" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small">
@@ -39,14 +39,14 @@
 
             <Entry Keyboard="Numeric" Placeholder="dd/mm/yyyy">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="XX/XX/XXXX" />
+                    <xct:MaskedBehavior Mask="XX/XX/XXXX" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Date 'XX/XX/XXXX'" />
 
             <Entry Keyboard="Numeric" Placeholder="hh:mm">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="XX:XX" />
+                    <xct:MaskedBehavior Mask="XX:XX" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small">
@@ -60,14 +60,14 @@
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="XXX-XX-XXXX" />
+                    <xct:MaskedBehavior Mask="XXX-XX-XXXX" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Social Security Number 'XXX-XX-XXXX'" />
 
             <Entry Keyboard="Numeric">
                 <Entry.Behaviors>
-                    <behaviors:MaskedBehavior Mask="(XXX) XXX-XXXX" />
+                    <xct:MaskedBehavior Mask="(XXX) XXX-XXXX" />
                 </Entry.Behaviors>
             </Entry>
             <Label Padding="10,0,10,50" FontSize="Small" Text="e.g. Phone Number '(XXX) XXX-XXXX'" />
