--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaxLengthReachedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaxLengthReachedBehaviorPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Behaviors"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
+                xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Behaviors"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.MaxLengthReachedBehaviorPage">
 
     <pages:BasePage.BindingContext>
@@ -46,8 +46,8 @@
                        MaxLength="{Binding Path=Text, Source={x:Reference MaxLengthSetting}}"
                        Margin="{StaticResource ContentPadding}">
                     <Entry.Behaviors>
-                        <behaviors:MaxLengthReachedBehavior MaxLengthReached="MaxLengthReachedBehavior_MaxLengthReached"
-                                                            ShouldDismissKeyboardAutomatically="{Binding Path=IsToggled, Source={x:Reference AutoDismissKeyboardSetting}}" />
+                        <xct:MaxLengthReachedBehavior MaxLengthReached="MaxLengthReachedBehavior_MaxLengthReached"
+                                                      ShouldDismissKeyboardAutomatically="{Binding Path=IsToggled, Source={x:Reference AutoDismissKeyboardSetting}}" />
                     </Entry.Behaviors>
                 </Entry>
 
@@ -64,8 +64,8 @@
                        MaxLength="{Binding Path=Text, Source={x:Reference MaxLengthSetting}}"
                        Margin="{StaticResource ContentPadding}">
                     <Entry.Behaviors>
-                        <behaviors:MaxLengthReachedBehavior Command="{Binding MaxLengthReachedCommand}"
-                                                            ShouldDismissKeyboardAutomatically="{Binding Path=IsToggled, Source={x:Reference AutoDismissKeyboardSetting}}" />
+                        <xct:MaxLengthReachedBehavior Command="{Binding MaxLengthReachedCommand}"
+                                                      ShouldDismissKeyboardAutomatically="{Binding Path=IsToggled, Source={x:Reference AutoDismissKeyboardSetting}}" />
                     </Entry.Behaviors>
                 </Entry>
 
