--- a/XamarinCommunityToolkitSample/Pages/Behaviors/UriValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/UriValidationBehaviorPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.UriValidationBehaviorPage"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.UriValidationBehaviorPage">
 
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
@@ -18,17 +18,17 @@
         <StackLayout>
             <Entry Placeholder="UriKind: Absolute">
                 <Entry.Behaviors>
-                    <behaviors:UriValidationBehavior UriKind="Absolute" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
+                    <xct:UriValidationBehavior UriKind="Absolute" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
                 </Entry.Behaviors>
             </Entry>
             <Entry Placeholder="UriKind: Relative">
                 <Entry.Behaviors>
-                    <behaviors:UriValidationBehavior UriKind="Relative" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
+                    <xct:UriValidationBehavior UriKind="Relative" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
                 </Entry.Behaviors>
             </Entry>
             <Entry Placeholder="UriKind: RelativeOrAbsolute">
                 <Entry.Behaviors>
-                    <behaviors:UriValidationBehavior UriKind="RelativeOrAbsolute" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
+                    <xct:UriValidationBehavior UriKind="RelativeOrAbsolute" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
                 </Entry.Behaviors>
             </Entry>
         </StackLayout>
