--- a/XamarinCommunityToolkitSample/Pages/Converters/ItemTappedEventArgsPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Converters/ItemTappedEventArgsPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Converters"
-                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
-                xmlns:converters="clr-namespace:Xamarin.CommunityToolkit.Converters;assembly=Xamarin.CommunityToolkit"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.ItemTappedEventArgsPage"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.ItemTappedEventArgsPage">
 
     <pages:BasePage.BindingContext>
         <vm:ItemTappedEventArgsViewModel />
@@ -13,7 +12,7 @@
 
     <pages:BasePage.Resources>
         <ResourceDictionary>
-            <converters:ItemTappedEventArgsConverter x:Key="ItemTappedEventArgsConverter" />
+            <xct:ItemTappedEventArgsConverter x:Key="ItemTappedEventArgsConverter" />
         </ResourceDictionary>
     </pages:BasePage.Resources>
 
@@ -53,7 +52,7 @@
         </ListView.ItemTemplate>
 
         <ListView.Behaviors>
-            <behaviors:EventToCommandBehavior EventName="ItemTapped"
+            <xct:EventToCommandBehavior EventName="ItemTapped"
                                               Command="{Binding ItemTappedCommand}"
                                               EventArgsConverter="{StaticResource ItemTappedEventArgsConverter}" />
         </ListView.Behaviors>
