--- a/XamarinCommunityToolkitSample/Pages/Converters/MultiConverterPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Converters/MultiConverterPage.xaml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<pages:BasePage
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.Converters;assembly=Xamarin.CommunityToolkit"
-    xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Converters"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.MultiConverterPage">
+<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Converters"
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.MultiConverterPage">
     <pages:BasePage.Resources>
         <ResourceDictionary>
             <xct:MultiConverter
