--- a/XamarinCommunityToolkitSample/Pages/Views/BadgeViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/BadgeViewPage.xaml
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:BasePage
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-    xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    xmlns:viewmodels="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.BadgeViewPage"
-    Title="BadgeView">
+<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                xmlns:viewmodels="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views"
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.BadgeViewPage"
+                Title="BadgeView">
     <pages:BasePage.Resources>
         <ResourceDictionary>
 
@@ -28,24 +27,24 @@
                 <Label
                     Text="Getting started"
                     Style="{StaticResource SectionStyle}"/>
-                <controls:BadgeView
+                <xct:BadgeView
                     BackgroundColor="Red"
                     TextColor="White"
                     Text="1">
                     <Label
                         Text="BadgeView"/>
-                </controls:BadgeView>
+                </xct:BadgeView>
                 <Label
                     Text="Customization options"
                     Style="{StaticResource SectionStyle}"/>
-                <controls:BadgeView
+                <xct:BadgeView
                     BackgroundColor="Blue"
                     TextColor="White"
                     Text="1003">
                     <Label
                         Text="Long Text"/>
-                </controls:BadgeView>
-                <controls:BadgeView
+                </xct:BadgeView>
+                <xct:BadgeView
                     BackgroundColor="Red"
                     FontAttributes="Bold"
                     FontSize="8"
@@ -53,8 +52,8 @@
                     Text="1">
                     <Label
                         Text="Font Customization"/>
-                </controls:BadgeView>
-                <controls:BadgeView
+                </xct:BadgeView>
+                <xct:BadgeView
                     BackgroundColor="Red"
                     FontAttributes="Bold"
                     FontSize="Medium"
@@ -62,16 +61,16 @@
                     Text="1">
                     <Label
                         Text="Named Font Size"/>
-                </controls:BadgeView>
-                <controls:BadgeView
+                </xct:BadgeView>
+                <xct:BadgeView
                     BackgroundColor="Red"
                     BorderColor="Orange"
                     TextColor="White"
                     Text="1">
                     <Label
                         Text="Border Customization"/>
-                </controls:BadgeView>
-                <controls:BadgeView
+                </xct:BadgeView>
+                <xct:BadgeView
                     BackgroundColor="Red"
                     BorderColor="Orange"
                     HasShadow="True"
@@ -79,8 +78,8 @@
                     Text="1">
                     <Label
                         Text="Shadow Customization"/>
-                </controls:BadgeView>
-                <controls:BadgeView
+                </xct:BadgeView>
+                <xct:BadgeView
                     HorizontalOptions="Center"
                     BadgePosition="TopRight"
                     BackgroundColor="Red"
@@ -96,11 +95,11 @@
                             VerticalOptions="Center"
                             Text="TopRight"/>
                     </Grid>
-                </controls:BadgeView>
+                </xct:BadgeView>
                 <Label
                     Text="Badge animations"
                     Style="{StaticResource SectionStyle}"/>
-                <controls:BadgeView
+                <xct:BadgeView
                     BackgroundColor="Red"
                     Text="{Binding Counter}"
                     TextColor="White">
@@ -115,7 +114,7 @@
                             Command="{Binding DecreaseCommand}"
                             Text="Decrease"/>
                     </StackLayout>
-                </controls:BadgeView>
+                </xct:BadgeView>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
