--- a/XamarinCommunityToolkitSample/Pages/Views/ShieldPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ShieldPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<pages:BasePage
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-    xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ShieldPage"
-    Title="Shield">
+<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ShieldPage"
+                Title="Shield">
 
     <StackLayout
         Spacing="10">
@@ -13,7 +12,7 @@
         <StackLayout
             Orientation="Horizontal">
 
-            <controls:Shield
+            <xct:Shield
                 Subject="C#"
                 Status=">=4.5"
                 Color="DodgerBlue"
@@ -21,14 +20,14 @@
                 Margin="2,0"
                 Tapped="OnShieldTapped" />
 
-            <controls:Shield
+            <xct:Shield
                 Subject="IDE"
                 Status="2019"
                 Color="DodgerBlue"
                 TextColor="White"
                 Margin="2,0" />
 
-            <controls:Shield
+            <xct:Shield
                 Subject="chat"
                 Status="on discord"
                 Color="SeaGreen"
@@ -39,7 +38,7 @@
         <StackLayout
             Orientation="Horizontal">
 
-            <controls:Shield
+            <xct:Shield
                 Subject="IDE"
                 Status="2019"
                 Color="DodgerBlue"
@@ -47,7 +46,7 @@
                 FontSize="20"
                 Margin="2,0" />
 
-            <controls:Shield
+            <xct:Shield
                 Subject="IDE"
                 Status="2019"
                 Color="DodgerBlue"
@@ -55,7 +54,7 @@
                 FontSize="Title"
                 Margin="2,0" />
 
-            <controls:Shield
+            <xct:Shield
                 Subject="IDE"
                 Status="2019"
                 Color="DodgerBlue"
@@ -63,7 +62,7 @@
                 FontAttributes="Bold"
                 Margin="2,0" />
 
-            <controls:Shield
+            <xct:Shield
                 Subject="IDE"
                 Status="2019"
                 Color="DodgerBlue"
